--- a/css/style.css
+++ b/css/style.css
@@ -160,3 +160,13 @@ section > div{
 .btnVoltar:hover{
     background-color: #577b74;
 }
+
+.Tiu{
+    text-align: center;
+    font-size: 2.2em;
+}
+
+.Tiv{
+    text-align: center;
+    font-size: 2.2em;
+}
